test/ruby/test_string.rb
@@ -2249,6 +2249,13 @@ class TestString < Test::Unit::TestCase
     b = "hello"f
     assert_equal a.object_id, b.object_id
   end
+
+  def test_frozen_strings_are_deduplicated_with_encoding
+    a = eval("# coding: utf-8\n'hello'f")
+    b = eval("# coding: ascii\n'hello'f")
+    assert_equal Encoding::UTF_8, a.encoding
+    assert_equal Encoding::US_ASCII, b.encoding
+  end
 end
 
 class TestString2 < TestString
